--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ include = [
     "src/**",
     "examples/**",
     "tests/**",
-    "bench/**",
+    "benches/**",
     "LICENSE*",
     "Cargo.toml",
 ]
@@ -30,7 +30,7 @@ goblin = "0.2.2"
 hash32 = "0.1.0"
 libc = "0.2"
 log = "0.4.2"
-rand = "0.7.3"
+rand = { version = "0.7.3", features = ["small_rng"]}
 scroll = "0.10.1"
 thiserror = "1.0"
 time = "0.1"
@@ -39,3 +39,4 @@ time = "0.1"
 
 elf = "0.0.10"
 json = "0.11"
+test_utils = { path = "test_utils/" }
