--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ repository = "https://github.com/solana-labs/rbpf"
 homepage = "https://solana.com/"
 keywords = ["BPF", "eBPF", "interpreter", "JIT", "filtering"]
 license = "Apache-2.0"
+edition = "2018"
 
 include = [
     "src/**",
@@ -19,7 +20,7 @@ include = [
 
 [dependencies]
 byteorder = "1.2"
-combine = "2.5"
+combine = "3.8.1"
 goblin = "0.2.2"
 hash32 = "0.1.0"
 libc = "0.2"
