Adds benchmarks for JIT vs Interpreter performance of address translation. (#146)

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ script:
 - export RUSTFLAGS="-D warnings"
 - cargo build --verbose
 - cargo test --verbose
-- if [[ $(rustup default) == *"nightly"* ]]; then cargo bench; fi
+- if [[ $(rustup default) == *"nightly"* ]]; then cargo bench -- --nocapture; fi
 
 before_deploy:
 - cargo doc
