--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,3 +35,6 @@ rustc-demangle = "0.1"
 elf = "0.0.10"
 json = "0.11"
 test_utils = { path = "test_utils/" }
+
+[build-dependencies]
+version_check = "0.9"
