--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Lint
       run: |
         cargo fmt --all -- --check
-        cargo clippy --all --tests -- --deny=warnings
+        cargo clippy --all --tests -- --deny=warnings --deny=clippy::integer_arithmetic
       shell: bash
     - name: Build and test
       run: |
