--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ include = [
 ]
 
 [dependencies]
+arbitrary = { version = "1.0", optional = true, features = ["derive"] }
 byteorder = "1.2"
 combine = "3.8.1"
 goblin = "0.5.1"
@@ -29,6 +30,9 @@ rand = { version = "0.8.5", features = ["small_rng"]}
 scroll = "0.11"
 thiserror = "1.0.26"
 rustc-demangle = "0.1"
+
+[features]
+fuzzer-not-safe-for-production = ["arbitrary"]
 
 [dev-dependencies]
 elf = "0.0.10"
