--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -13,6 +13,7 @@ arbitrary = { version = "1.0", features = ["derive"] }
 libfuzzer-sys = "0.4"
 num-traits = "0.2"
 rayon = "1.5"
+test_utils = { path = "../test_utils/" }
 
 [dependencies.solana_rbpf]
 path = ".."
