--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ byteorder = "1.2"
 combine = "3.8.1"
 goblin = "0.5.1"
 hash32 = "0.2.0"
-libc = "0.2"
+libc = { version = "0.2", optional = true }
 log = "0.4.2"
 rand = { version = "0.8.5", features = ["small_rng"]}
 scroll = "0.11"
@@ -32,7 +32,9 @@ thiserror = "1.0.26"
 rustc-demangle = "0.1"
 
 [features]
+default = ["jit"]
 fuzzer-not-safe-for-production = ["arbitrary"]
+jit = ["libc"]
 
 [dev-dependencies]
 elf = "0.0.10"
