Cleanup - cfg, cargo fmt and clippy (#416)
* Apply rustfmt::skip to JitCompiler impl only, instead of the entire file.

* Removes unwrap() in JitCompiler::new().

* Move deny(clippy::integer_arithmetic) from CLI arguments to source code.

* Moves definition of RuntimeEnvironment into VM.

* Cleanup target_os specific cfgs.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Lint
       run: |
         cargo fmt --all -- --check
-        cargo clippy --all --tests -- --deny=warnings --deny=clippy::integer_arithmetic
+        cargo clippy --all --tests -- --deny=warnings
       if: matrix.rust != 'nightly'
       shell: bash
     - name: Build and test
@@ -44,7 +44,7 @@ jobs:
       run: |
         export RUSTFLAGS="-D warnings"
         cargo fmt --all --manifest-path cli/Cargo.toml -- --check
-        cargo clippy --all --tests --manifest-path cli/Cargo.toml -- --deny=warnings --deny=clippy::integer_arithmetic
+        cargo clippy --all --tests --manifest-path cli/Cargo.toml -- --deny=warnings
         cargo build --manifest-path cli/Cargo.toml --verbose
         cargo test --manifest-path cli/Cargo.toml --verbose
       if: matrix.rust != 'nightly'
