Fix lints, fix ci a bit (#438)
* Fix lints

* ci: lint using nightly only

We want to catch new lints and fix them. If we also run stable clippy,
we break CI anytime we fix a lint that is still nightly only.

* ci: do build and test things on nightly

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,30 +24,32 @@ jobs:
       run: |
         rustup update ${{ matrix.rust }} --no-self-update
         rustup default ${{ matrix.rust }}
-        rustup component add clippy-preview
+        rustup component add clippy
         rustup component add rustfmt
       shell: bash
     - name: Lint
       run: |
         cargo fmt --all -- --check
         cargo clippy --all --tests -- --deny=warnings
-      if: matrix.rust != 'nightly'
+      if: matrix.rust == 'nightly'
       shell: bash
     - name: Build and test
       run: |
         export RUSTFLAGS="-D warnings"
         cargo build --verbose
         cargo test --verbose
-      if: matrix.rust != 'nightly'
       shell: bash
-    - name: Check CLI
+    - name: CLI - Lint
       run: |
-        export RUSTFLAGS="-D warnings"
         cargo fmt --all --manifest-path cli/Cargo.toml -- --check
         cargo clippy --all --tests --manifest-path cli/Cargo.toml -- --deny=warnings
+      if: matrix.rust == 'nightly'
+      shell: bash
+    - name: CLI - Build and test
+      run: |
+        export RUSTFLAGS="-D warnings"
         cargo build --manifest-path cli/Cargo.toml --verbose
         cargo test --manifest-path cli/Cargo.toml --verbose
-      if: matrix.rust != 'nightly'
       shell: bash
     - name: Check fuzz
       run: |
