--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,18 +25,22 @@ combine = "3.8.1"
 gdbstub = { version = "0.6.2", optional = true }
 goblin = "0.5.1"
 hash32 = "0.2.0"
-libc = { version = "0.2", optional = true }
 log = "0.4.2"
 rand = { version = "0.8.5", features = ["small_rng"]}
 rustc-demangle = "0.1"
 scroll = "0.11"
 thiserror = "1.0.26"
+
+[target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", features = ["memoryapi", "sysinfoapi", "winnt", "errhandlingapi"], optional = true }
+
+[target.'cfg(not(windows))'.dependencies]
+libc = { version = "0.2", optional = true }
 
 [features]
 default = ["jit"]
-fuzzer-not-safe-for-production = ["arbitrary"]
 jit = ["libc", "winapi"]
+fuzzer-not-safe-for-production = ["arbitrary"]
 debugger = ["gdbstub"]
 
 [dev-dependencies]
