--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,7 @@ jobs:
         export RUSTFLAGS="-D warnings"
         cargo build --verbose
         cargo test --verbose
+        cargo test --test exercise_instructions --verbose
       shell: bash
     - name: CLI - Lint
       run: |
